chore: remove espaços em branco e comentários